manifests/cluster-addons/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - funnel
  routes:
    - match: HostRegexp(`keycloak\..*\.ts\.net`)
      kind: Rule
      #     middlewares:
      #       - name: oauth2-auth
      #         namespace: traefik
      services:
        - name: keycloak-service
          port: http
