manifests/cluster-addons/keycloak/networkpolicy-allow-ingress-same-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-same-namespace
  namespace: keycloak
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
