manifests/cluster-addons/keycloak/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-same-namespace
  namespace: keycloak
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cnpg
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: keycloak-database
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 8000
        - port: 543
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-tailscale-to-keycloak
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/component: server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
          podSelector:
            matchLabels:
              tailscale.com/parent-resource: keycloak
              tailscale.com/parent-resource-ns: keycloak
